2013-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_set_color):  Revert a portion of the patch
	from 2013-01-08 (Tracker #1199).  Repairs overzealous removal of redundant
	color commands.  Bug #1185.

	* Makefile.am:  Add lisp subdirectory to the list of files in EXTRA_DIST.
	This forces the subdirectory to be recreated even if it is currently 
	disabled, and thus allows "make dist" from inside a tree that has been 
	configured --without-lisp-files.

2013-04-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c src/plot3d.c src/set.c(parse_label_options) src/setshow.h
	parse_label_options() is called both from "set label ..." and from
	"plot ... with labels". The latter case should not accept keywords "at",
	"front", "back".

2013-04-08  Dima Kogan  <dima@secretsauce.net>

	* src/gplt_x11.c: Calculate window resizing based on gheight (plot only)
	rather than height (full window).

2013-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/term.h:  Remove gpic (minimal line art sent to groff)
	hp2623a (mid 1980s graphics terminal a.k.a. "the ET-head") and
	hp2648 (1979 720x360 dot graphics terminal) from the set of terminals
	configured in by default.

2013-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (make_tics):  Test for an autoscaled axis that is enabled
	but has no corresponding data (e.g. "set x2tics; plot ... axes x1y1").
	In this case warn and skip tick generation rather than stopping with an
	error.

	* src/graphics.c (plot_image_or_update_axes)
	src/plot2d.c (refresh_bounds):
	Refresh of image plots tested only for autoscaling on x; now we also
	test for autoscaling on y.

	* src/axis.h: Do not add an extraneous factor of 1e-3 to the axis
	limits of a refreshed plot.  Yes it prevents log-scale axes from
	overflowing when zoomed out, but also it prevents the endpoint
	values from being recognized as autoscaled.  A different fix is
	needed for the overflowing log-scale axes.